fix: Alignment of image after reducing height of navbar

--- a/src/pages/ContactUs/ContactUs.css
+++ b/src/pages/ContactUs/ContactUs.css
@@ -2,7 +2,7 @@
 
 /* layout css */
 .maindiv_loginpage {
-  margin-top: 9vh;
+  margin-top: 4vh;
   display: flex;
   flex-direction: row;
   background: url("./../../images/tsg.jpg") no-repeat;
